// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index base 1`] = `
Object {
  "extends": Array [
    ":semanticCommits",
    ":semanticPrefixFix",
  ],
  "github-actions": Object {
    "enabled": false,
  },
  "labels": Array [
    "maintenance",
  ],
  "lockFileMaintenance": Object {
    "automerge": true,
    "enabled": true,
    "semanticCommitType": "chore",
  },
  "rangeStrategy": "replace",
  "regexManagers": Array [
    Object {
      "datasourceTemplate": "github-tags",
      "fileMatch": Array [
        "\\\\.js$",
      ],
      "matchStrings": Array [
        "(^|\\\\s)gitHubAction\`(?<depName>.*?)@v(?<currentValue>.*?)\`",
      ],
      "versioningTemplate": "npm",
    },
  ],
  "semanticCommitScope": null,
}
`;

exports[`index lock file commit type 1`] = `
Object {
  "extends": Array [
    ":semanticCommits",
  ],
  "ignorePaths": Array [
    ".github/workflows/build.yml",
  ],
  "labels": Array [
    "maintenance",
  ],
  "lockFileMaintenance": Object {
    "enabled": true,
  },
  "packageRules": Array [
    Object {
      "depTypeList": Array [
        "dependencies",
        "devDependencies",
        "peerDependencies",
        "optionalDependencies",
      ],
      "semanticCommitType": "fix",
    },
  ],
  "semanticCommitScope": null,
}
`;

exports[`index lock file fix commit type 1`] = `
Object {
  "extends": Array [
    ":semanticCommits",
    ":semanticPrefixFix",
  ],
  "github-actions": Object {
    "enabled": false,
  },
  "labels": Array [
    "maintenance",
  ],
  "lockFileMaintenance": Object {
    "automerge": true,
    "enabled": true,
  },
  "rangeStrategy": "replace",
  "regexManagers": Array [
    Object {
      "datasourceTemplate": "github-tags",
      "fileMatch": Array [
        "\\\\.js$",
      ],
      "matchStrings": Array [
        "(^|\\\\s)gitHubAction\`(?<depName>.*?)@v(?<currentValue>.*?)\`",
      ],
      "versioningTemplate": "npm",
    },
  ],
  "semanticCommitScope": null,
}
`;

exports[`index not base 1`] = `
Object {
  "extends": Array [
    ":semanticCommits",
    ":semanticPrefixFix",
  ],
  "github-actions": Object {
    "enabled": false,
  },
  "labels": Array [
    "maintenance",
  ],
  "lockFileMaintenance": Object {
    "automerge": true,
    "enabled": true,
    "semanticCommitType": "chore",
  },
  "rangeStrategy": "replace",
  "regexManagers": Array [
    Object {
      "datasourceTemplate": "github-tags",
      "fileMatch": Array [
        "\\\\.js$",
      ],
      "matchStrings": Array [
        "(^|\\\\s)gitHubAction\`(?<depName>.*?)@v(?<currentValue>.*?)\`",
      ],
      "versioningTemplate": "npm",
    },
  ],
  "semanticCommitScope": null,
}
`;
